fixed z-index

--- a/src/components/Trello/Board/Board.module.scss
+++ b/src/components/Trello/Board/Board.module.scss
@@ -6,6 +6,7 @@ body{
     width: 1vw;
     position: sticky;
     left: 60px;
+    z-index: 100;
 }
 
 .wrap{
